--- a/TestFiles/Project10/Square/Main.vm
+++ b/TestFiles/Project10/Square/Main.vm
@@ -82,6 +82,7 @@ return
 
 
 //class symbol table
+//Main
 //name: test
 //type: boolean
 //kind: static
@@ -89,6 +90,7 @@ return
 
 
 //method's symbol table
+//Main.main
 //name: game
 //type: SquareGame
 //kind: var
@@ -100,6 +102,7 @@ return
 
 
 //method's symbol table
+//Main.test
 //name: i
 //type: int
 //kind: var
