--- a/TestFiles/Project10/ExpressionLessSquare/SquareGame.vm
+++ b/TestFiles/Project10/ExpressionLessSquare/SquareGame.vm
@@ -78,7 +78,9 @@ not
 if-goto endWhile.148
 push local 0
 pop local 0
-call moveSquare 0
+push pointer 0
+call SquareGame.moveSquare 1
+pop temp 0
 goto WhileTrue.148
 label endWhile.148
 push local 0
@@ -145,7 +147,9 @@ not
 if-goto endWhile.245
 push local 0
 pop local 0
-call moveSquare 0
+push pointer 0
+call SquareGame.moveSquare 1
+pop temp 0
 goto WhileTrue.245
 label endWhile.245
 goto WhileTrue.143
@@ -155,6 +159,7 @@ return
 
 
 //class symbol table
+//SquareGame
 //name: square
 //type: Square
 //kind: field
@@ -166,6 +171,7 @@ return
 
 
 //method's symbol table
+//SquareGame.new
 //name: square
 //type: Square
 //kind: this
@@ -177,6 +183,7 @@ return
 
 
 //method's symbol table
+//SquareGame.dispose
 //name: this
 //type: SquareGame
 //kind: argument
@@ -192,6 +199,7 @@ return
 
 
 //method's symbol table
+//SquareGame.moveSquare
 //name: this
 //type: SquareGame
 //kind: argument
@@ -207,6 +215,7 @@ return
 
 
 //method's symbol table
+//SquareGame.run
 //name: this
 //type: SquareGame
 //kind: argument
