--- a/TestFiles/Project10/Square/Square.vm
+++ b/TestFiles/Project10/Square/Square.vm
@@ -8,7 +8,9 @@ push argument 1
 pop this 1
 push argument 2
 pop this 2
-call draw 0
+push pointer 0
+call Square.draw 1
+pop temp 0
 push pointer 0
 return
 function Square.dispose 0
@@ -72,12 +74,16 @@ lt
 and
 not
 if-goto ifFalse.144
-call erase 0
+push pointer 0
+call Square.erase 1
+pop temp 0
 push this 2
 push constant 2
 add
 pop this 2
-call draw 0
+push pointer 0
+call Square.draw 1
+pop temp 0
 goto endIf.144
 label ifFalse.144
 label endIf.144
@@ -91,12 +97,16 @@ push constant 2
 gt
 not
 if-goto ifFalse.194
-call erase 0
+push pointer 0
+call Square.erase 1
+pop temp 0
 push this 2
 push constant 2
 sub
 pop this 2
-call draw 0
+push pointer 0
+call Square.draw 1
+pop temp 0
 goto endIf.194
 label ifFalse.194
 label endIf.194
@@ -301,6 +311,7 @@ return
 
 
 //class symbol table
+//Square
 //name: x
 //type: int
 //kind: field
@@ -316,6 +327,7 @@ return
 
 
 //method's symbol table
+//Square.new
 //name: Ax
 //type: int
 //kind: argument
@@ -343,6 +355,7 @@ return
 
 
 //method's symbol table
+//Square.dispose
 //name: this
 //type: Square
 //kind: argument
@@ -362,6 +375,7 @@ return
 
 
 //method's symbol table
+//Square.draw
 //name: this
 //type: Square
 //kind: argument
@@ -381,6 +395,7 @@ return
 
 
 //method's symbol table
+//Square.erase
 //name: this
 //type: Square
 //kind: argument
@@ -400,6 +415,7 @@ return
 
 
 //method's symbol table
+//Square.incSize
 //name: this
 //type: Square
 //kind: argument
@@ -419,6 +435,7 @@ return
 
 
 //method's symbol table
+//Square.decSize
 //name: this
 //type: Square
 //kind: argument
@@ -438,6 +455,7 @@ return
 
 
 //method's symbol table
+//Square.moveUp
 //name: this
 //type: Square
 //kind: argument
@@ -457,6 +475,7 @@ return
 
 
 //method's symbol table
+//Square.moveDown
 //name: this
 //type: Square
 //kind: argument
@@ -476,6 +495,7 @@ return
 
 
 //method's symbol table
+//Square.moveLeft
 //name: this
 //type: Square
 //kind: argument
@@ -495,6 +515,7 @@ return
 
 
 //method's symbol table
+//Square.moveRight
 //name: this
 //type: Square
 //kind: argument
