--- a/TestFiles/Project9/Random.vm
+++ b/TestFiles/Project9/Random.vm
@@ -66,6 +66,7 @@ return
 
 
 //class symbol table
+//Random
 //name: previous
 //type: int
 //kind: static
@@ -85,6 +86,7 @@ return
 
 
 //method's symbol table
+//Random.init
 //name: seed
 //type: int
 //kind: argument
@@ -108,6 +110,7 @@ return
 
 
 //method's symbol table
+//Random.mod
 //name: a
 //type: int
 //kind: argument
@@ -135,6 +138,7 @@ return
 
 
 //method's symbol table
+//Random.nextInt
 //name: previous
 //type: int
 //kind: static
